--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 axum = "0.8.4"
 tokio = { version = "1.45.1", features = ["rt"] }
+reqwest = { version = "0.12", features = [] }
