--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 axum = "0.8.4"
+http = "1.3"
+tower-http = { version = "0.6", features = ["cors"] }
 tokio = { version = "1.45.1", features = ["rt"] }
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"]}
