--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "1.45.1", features = ["rt"] }
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+scraper = "0.23"
